--- a/IV/index.html
+++ b/IV/index.html
@@ -7,4 +7,12 @@
     <body>
         <div id = 'app'></div>
     </body>
+
+    <script>
+
+    window.onblur = function () { document.title = 'Gemmer 10'; }
+
+    window.onfocus = function () { document.title = 'PizzaUno'; }
+
+    </script>
 </html>
